adicionado o typeORM, srynger para utilização de singleton e atualização da documentação do swagger.
